# problems

./: .gitignore  .ocamlinit  README.md  dune-project  notes.md  problems.opam
lib/: arithmetic.ml  binary_tree.ml  dune  lists.ml  logic.ml  utils.ml
test/: dune  test_arithmetic.ml  test_binary_tree.ml  test_lists.ml  test_logic.ml  test_problems.ml  test_utils.ml
