(lang dune 3.14)

(name problems)

(generate_opam_files true)

(source
 (github djedkare/problems))

(authors "Frederic Arnold")

(maintainers "Frederic Arnold")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name problems)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
